--- a/news/app_news/templates/news_list.html
+++ b/news/app_news/templates/news_list.html
@@ -16,5 +16,6 @@
 <p>Новостей нет</p>
 {% endif %}
 <a href = '../news_create'>Добавить новость</a>
+<a href = '../login'>Авторизация</a>
 </body>
 </html>
