--- a/news/app_news/templates/news_list.html
+++ b/news/app_news/templates/news_list.html
@@ -16,14 +16,15 @@
 {% else %}
 <p>Новостей нет</p>
 {% endif %}
-<a href = '../news_create'>Добавить новость</a>
+<a href = '/news_create'>Добавить новость</a>
 
 {% if request.user.is_authenticated %}
 <h4> Вы авторизованы на сайте как {{request.user.username}} </h4>
-<a href="../logout">Выйти из учетной записи</a>
+<a href="/logout">Выйти из учетной записи</a>
 {% else %}
 <h3> Вы не авторизованы на сайте </h3>
-<a href = '../login'>Авторизация</a>
+<a href = '/login'>Авторизация</a>
+<a href = '/register'>Регистрация</a>
 {% endif %}
 
 </body>
