--- a/news/app_news/templates/news_detail.html
+++ b/news/app_news/templates/news_detail.html
@@ -10,6 +10,10 @@
 <h5>{{news.created_at}}</h5>
 <a>{{news.description}}</a>
 
+{% if news.tag %}
+<h4>Тэг: {{news.tag}}</h4>
+{% endif %}
+
 <h3>Комментарии</h3>
 {% if comments %}
 {% for comment in comments %}
